<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".soup">

    <androidx.appcompat.widget.AppCompatTextView
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:background="@color/colorPrimary"
        android:gravity="center"
        android:text="@string/french_fries"
        android:textColor="@color/font_color"
        android:textSize="36sp"
        android:textStyle="bold|italic"
        tools:layout_editor_absoluteX="-16dp" />
    <ImageView
        android:id="@+id/others_frenchfries_S"
        android:layout_width="155dp"
        android:layout_height="200dp"
        android:layout_marginStart="35dp"
        android:layout_marginLeft="40dp"
        android:layout_marginTop="65dp"
        android:layout_marginEnd="35dp"
        android:layout_marginRight="50dp"
        android:src="@drawable/beefsoup" />

    <ImageView
        android:id="@+id/others_frenchfries_M"
        android:layout_width="155dp"
        android:layout_height="200dp"
        android:layout_marginStart="220dp"
        android:layout_marginLeft="10dp"
        android:layout_marginTop="65dp"
        android:layout_marginEnd="35dp"
        android:layout_marginRight="15dp"
        android:src="@drawable/cornsoup" />
    <TextView
        android:id="@+id/textview_frenchfries_S"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/french_fries_s"
        android:layout_marginTop="255dp"
        android:layout_marginStart="35dp"
        android:layout_marginLeft="60dp" />

    <TextView
        android:id="@+id/textview_frenchfries_M"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/french_fries_m"
        android:layout_marginTop="255dp"
        android:layout_marginStart="220dp"
        android:layout_marginLeft="60dp" />
    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="horizontal"
        android:layout_marginTop="285dp"
        android:layout_marginBottom="470dp">
        <TextView
            android:id="@+id/textview_frenchfries_S_price"
            android:layout_width="61dp"
            android:layout_height="wrap_content"
            android:layout_marginStart="88dp"
            android:layout_marginLeft="90dp"
            android:layout_marginEnd="128dp"
            android:layout_marginRight="200dp"
            android:text="@string/_29_baht"
            android:textColor="#3a727f" />
        <TextView
            android:id="@+id/textview_frenchfries_M_price"
            android:layout_width="61dp"
            android:layout_height="wrap_content"
            android:layout_marginStart="0dp"
            android:layout_marginLeft="90dp"
            android:layout_marginEnd="128dp"
            android:layout_marginRight="200dp"
            android:text="@string/_49_baht"
            android:textColor="#3a727f" />
    </LinearLayout>
    <LinearLayout
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginStart="45dp"
        android:layout_marginLeft="45dp"
        android:layout_marginEnd="45dp"
        android:layout_marginRight="45dp"
        android:layout_marginTop="310dp"
        android:layout_marginBottom="390dp"
        android:orientation="horizontal">
        <LinearLayout
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginEnd="60dp"
            android:layout_marginRight="60dp"
            android:orientation="horizontal">

            <Button
                android:id="@+id/Minusfrenchfries_S"
                android:layout_width="29dp"
                android:layout_height="30dp"
                android:layout_marginStart="0dp"
                android:layout_marginLeft="140dp"
                android:background="@drawable/custom_button_minusplus"
                android:text="@string/minus"
                android:textSize="20sp" />

            <TextView
                android:id="@+id/orderfrenchfries_S"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginLeft="30dp"
                android:layout_marginRight="30dp"
                android:text="@string/_0"
                android:textSize="20sp" />

            <Button
                android:id="@+id/Plusfrenchfries_S"
                android:layout_width="30dp"
                android:layout_height="30dp"
                android:layout_marginBottom="440dp"
                android:background="@drawable/custom_button_minusplus"
                android:text="@string/plus"
                android:textSize="18sp" />
        </LinearLayout>
        <LinearLayout
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:orientation="horizontal">

            <Button
                android:id="@+id/Minusfrenchfries_M"
                android:layout_width="30dp"
                android:layout_height="30dp"
                android:layout_marginStart="0dp"
                android:layout_marginLeft="140dp"
                android:background="@drawable/custom_button_minusplus"
                android:text="@string/minus"
                android:textSize="20sp" />

            <TextView
                android:id="@+id/orderfrenchfries_M"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginLeft="30dp"
                android:layout_marginRight="30dp"
                android:text="@string/_0"
                android:textSize="20sp" />

            <Button
                android:id="@+id/Plusfrenchfries_M"
                android:layout_width="30dp"
                android:layout_height="30dp"
                android:layout_marginBottom="440dp"
                android:background="@drawable/custom_button_minusplus"
                android:text="@string/plus"
                android:textSize="18sp" />
        </LinearLayout>
    </LinearLayout>




</RelativeLayout>