<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".pasta"
    android:background="@drawable/bg">

   <ScrollView
       android:layout_width="match_parent"
       android:layout_height="match_parent">
       <RelativeLayout
           android:layout_width="match_parent"
           android:layout_height="wrap_content">
           <TextView
               android:layout_width="match_parent"
               android:layout_height="wrap_content"
               android:background="#CA3D3D"
               android:layout_centerHorizontal="true"
               android:gravity="center"
               android:text="@string/pasta"
               android:textColor="#ECECEC"
               android:textSize="36dp"
               android:textStyle="italic" />

           <ImageView
               android:id="@+id/beefpasta"
               android:layout_width="155dp"
               android:layout_height="200dp"
               android:layout_marginStart="35dp"
               android:layout_marginLeft="40dp"
               android:layout_marginTop="65dp"
               android:layout_marginEnd="35dp"
               android:layout_marginRight="50dp"
               android:src="@drawable/beefpasta" />

           <ImageView
               android:id="@+id/others_chickenpasta"
               android:layout_width="155dp"
               android:layout_height="200dp"
               android:layout_marginStart="220dp"
               android:layout_marginLeft="10dp"
               android:layout_marginTop="65dp"
               android:layout_marginEnd="35dp"
               android:layout_marginRight="15dp"
               android:src="@drawable/cheesepasta" />

           <TextView
               android:id="@+id/textview_cbeefpasta"
               android:layout_width="wrap_content"
               android:layout_height="wrap_content"
               android:text="@string/beefpasta"
               android:textSize="17dp"
               android:textColor="#ECECEC"
               android:layout_marginTop="255dp"
               android:layout_marginStart="70dp"
               android:layout_marginLeft="60dp" />

           <TextView
               android:id="@+id/cheesepasta"
               android:layout_width="wrap_content"
               android:layout_height="wrap_content"
               android:text="@string/cheesepasta"
               android:layout_marginTop="255dp"
               android:layout_marginStart="250dp"
               android:layout_marginLeft="60dp"
               android:textSize="17dp"
               android:textColor="#ECECEC"/>
           <LinearLayout
               android:layout_width="match_parent"
               android:layout_height="wrap_content"
               android:orientation="horizontal"
               android:layout_marginTop="285dp"
               android:layout_marginBottom="470dp">

               <TextView
                   android:id="@+id/textview_beefpastaprice"
                   android:layout_width="61dp"
                   android:layout_height="match_parent"
                   android:layout_marginStart="88dp"
                   android:layout_marginLeft="90dp"
                   android:layout_marginEnd="128dp"
                   android:layout_marginRight="200dp"
                   android:text="@string/_89_baht"
                   android:textColor="#ECECEC" />
               <TextView
                   android:id="@+id/textview_chickenpastaprice"
                   android:layout_width="61dp"
                   android:layout_height="wrap_content"
                   android:layout_marginStart="0dp"
                   android:layout_marginLeft="90dp"
                   android:layout_marginEnd="128dp"
                   android:layout_marginRight="200dp"
                   android:text="@string/_89_baht"
                   android:textColor="#ECECEC"
                   android:textSize="17dp"/>
           </LinearLayout>
           <LinearLayout
               android:layout_width="wrap_content"
               android:layout_height="wrap_content"
               android:layout_marginStart="45dp"
               android:layout_marginLeft="45dp"
               android:layout_marginEnd="45dp"
               android:layout_marginRight="45dp"
               android:layout_marginTop="310dp"
               android:layout_marginBottom="390dp"
               android:orientation="horizontal">
               <LinearLayout
                   android:layout_width="wrap_content"
                   android:layout_height="wrap_content"
                   android:layout_marginEnd="60dp"
                   android:layout_marginRight="60dp"
                   android:orientation="horizontal">

                   <Button
                       android:id="@+id/Minusbeefpasta"
                       android:layout_width="29dp"
                       android:layout_height="30dp"
                       android:layout_marginStart="0dp"
                       android:layout_marginLeft="140dp"
                       android:background="@drawable/btn_gradient"
                       android:textColor="#ECECEC"
                       android:text="@string/minus"
                       android:textSize="20sp" />

                   <TextView
                       android:id="@+id/orderbeefpasta"
                       android:layout_width="wrap_content"
                       android:layout_height="wrap_content"
                       android:layout_marginLeft="30dp"
                       android:layout_marginRight="30dp"
                       android:text="@string/_0"
                       android:textSize="20sp"
                       android:textColor="#ECECEC"/>

                   <Button
                       android:id="@+id/Plusbeefpasta"
                       android:layout_width="30dp"
                       android:layout_height="30dp"
                       android:layout_marginBottom="440dp"
                       android:background="@drawable/btn_gradient"
                       android:textColor="#ECECEC"
                       android:text="@string/plus"
                       android:textSize="18sp" />
               </LinearLayout>
               <LinearLayout
                   android:layout_width="wrap_content"
                   android:layout_height="wrap_content"
                   android:orientation="horizontal">

                   <Button
                       android:id="@+id/Minuscheesepasta"
                       android:layout_width="30dp"
                       android:layout_height="30dp"
                       android:layout_marginStart="0dp"
                       android:layout_marginLeft="140dp"
                       android:background="@drawable/btn_gradient"
                       android:textColor="#ECECEC"
                       android:text="@string/minus"
                       android:textSize="20sp" />

                   <TextView
                       android:id="@+id/textview_ordercheesepasta"
                       android:layout_width="wrap_content"
                       android:layout_height="wrap_content"
                       android:layout_marginLeft="30dp"
                       android:layout_marginRight="30dp"
                       android:text="@string/_0"
                       android:textColor="#ECECEC"
                       android:textSize="20sp" />

                   <Button
                       android:id="@+id/Pluscheesepasta"
                       android:layout_width="30dp"
                       android:layout_height="30dp"
                       android:layout_marginBottom="440dp"
                       android:background="@drawable/btn_gradient"
                       android:textColor="#ECECEC"
                       android:text="@string/plus"
                       android:textSize="18sp" />
               </LinearLayout>
           </LinearLayout>
       </RelativeLayout>
   </ScrollView>

   </RelativeLayout>


